[gd_scene format=3 uid="uid://cocrwyr1w6m0b"]

[ext_resource type="Script" uid="uid://bahyvtwfv4wjm" path="res://scenes/ui/menus/save_selection_menu/save_selection_menu.gd" id="1_k0gu5"]
[ext_resource type="PackedScene" uid="uid://bunabml36p03k" path="res://scenes/ui/buttons/save_slot_button/save_slot_button.tscn" id="2_gb1u0"]

[node name="SaveSelectionMenu" type="Control" unique_id=998581770]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0gu5")

[node name="Panel" type="Panel" parent="." unique_id=569437169]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=322754350]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer" unique_id=197570472]
layout_mode = 2

[node name="SlotButton1" parent="VBoxContainer" unique_id=2138406969 instance=ExtResource("2_gb1u0")]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="SlotButton2" parent="VBoxContainer" unique_id=263396558 instance=ExtResource("2_gb1u0")]
unique_name_in_owner = true
layout_mode = 2
text = "2"
slot_id = 2

[node name="SlotButton3" parent="VBoxContainer" unique_id=1420738609 instance=ExtResource("2_gb1u0")]
unique_name_in_owner = true
layout_mode = 2
text = "3"
slot_id = 3

[node name="BackButton" type="Button" parent="." unique_id=560494537]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45
anchor_top = 0.8
anchor_right = 0.55
anchor_bottom = 0.8
offset_right = 8.0
offset_bottom = 8.0
text = "Back"
metadata/_edit_use_anchors_ = true
